Fix navbar masking content
Fix-up the styling so that the content doesn't appear under the navbar.

--- a/src/AppleFitnessWorkoutMapper/wwwroot/static/css/styles.css
+++ b/src/AppleFitnessWorkoutMapper/wwwroot/static/css/styles.css
@@ -3,19 +3,23 @@
     Licensed under the Apache 2.0 license. See the LICENSE file in the project root for full license information.
 */
 
+:root {
+  --navbar-height: 70px;
+}
+
 body {
   font-size: .875rem;
+  padding-top: var(--navbar-height);
 }
 
 .sidebar {
-  padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
 .sidebar-sticky {
   position: relative;
   top: 0;
-  height: calc(100vh - 48px);
+  height: calc(100vh - var(--navbar-height));
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto;
@@ -25,7 +29,7 @@ body {
   .sidebar-sticky {
     position: -webkit-sticky;
     position: sticky;
-    top: 48px;
+    top: var(--navbar-height);
   }
 }
 
@@ -56,7 +60,7 @@ ul.track-item-metadata {
 }
 
 [role="main"] {
-  padding-top: 60px;
+  padding-top: 12px;
 }
 
 #map {
